Split kernel messages by module
Messages that are truly cross-module are left as kernel,
plus those in the cs/prg modules (truly core), plus one
or two at the 'loading' stage where this seems the best description.

--- a/l3experimental/l3benchmark/l3benchmark.dtx
+++ b/l3experimental/l3benchmark/l3benchmark.dtx
@@ -199,18 +199,18 @@
 %   commands to produce errors.
 %    \begin{macrocode}
   {
-    \__kernel_msg_new:nnnn { kernel } { no-elapsed-time }
+    \__kernel_msg_new:nnnn { benchmark } { no-elapsed-time }
       { No~clock~detected~for~#1. }
       { The~current~engine~provides~no~way~to~access~the~system~time. }
     \cs_new_protected:Npn \sys_gzero_timer:
       {
-        \__kernel_msg_error:nnn { kernel } { no-elapsed-time }
+        \__kernel_msg_error:nnn { benchmark } { no-elapsed-time }
           { \sys_gzero_timer: }
       }
     \cs_new:Npn \sys_timer:
       {
         \int_value:w
-        \__kernel_msg_expandable_error:nnn { kernel } { no-elapsed-time }
+        \__kernel_msg_expandable_error:nnn { benchmark } { no-elapsed-time }
           { \sys_timer: }
         \c_zero_int
       }
