--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1510,7 +1510,7 @@
 %   This is here as this particular integer is needed both in package
 %   mode and to bootstrap \pkg{l3alloc}, and is documented in \pkg{l3int}.
 %   \LuaTeX{} and those which contain parts of the Omega extensions have
-%   more registers available than \eTeX{}. 
+%   more registers available than \eTeX{}.
 %    \begin{macrocode}
 \tex_ifdefined:D \tex_luatexversion:D
   \tex_chardef:D \c_max_register_int = 65 535 ~
@@ -1765,12 +1765,12 @@
 %    \begin{macrocode}
 \cs_set_protected:Npn \debug_on:n #1
   {
-    \__kernel_msg_error:nnx { kernel } { enable-debug }
+    \__kernel_msg_error:nnx { debug } { enable-debug }
       { \tl_to_str:n { \debug_on:n {#1} } }
   }
 \cs_set_protected:Npn \debug_off:n #1
   {
-    \__kernel_msg_error:nnx { kernel } { enable-debug }
+    \__kernel_msg_error:nnx { debug } { enable-debug }
        { \tl_to_str:n { \debug_off:n {#1} } }
   }
 %    \end{macrocode}
@@ -1943,7 +1943,7 @@
       { \@@_generate_conditional:nnNNNnnn {#1} {#2} #3 #4 #5 }
       { \tl_count:n {#2} }
       {
-        \__kernel_msg_error:nnxx { kernel } { bad-number-of-arguments }
+        \__kernel_msg_error:nnxx { cs } { bad-number-of-arguments }
           { \token_to_str:c { #1 : #2 } }
           { \tl_count:n {#2} }
         \use_none:nn
@@ -2183,7 +2183,7 @@
         \tl_if_empty:nF {#6}
           {
             \__kernel_msg_error:nnxx
-              { kernel } { conditional-form-unknown }
+              { prg } { conditional-form-unknown }
               {#6} { \token_to_str:c { #1 : #2 } }
           }
         \use_none:nnnnnn
