--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -533,7 +533,7 @@
           { \@@_nesting_number:N \l_@@_internal_a_tl }
         \@@_select:N \l_@@_internal_a_tl
       }
-      { \__kernel_msg_error:nn { kernel } { cctab-extra-end } }
+      { \__kernel_msg_error:nn { cctab } { extra-end } }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -613,7 +613,7 @@
       }
       { \cs_if_exist_p:c { @@_group_ #1 _chk: } }
       {
-        \__kernel_msg_error:nnx { kernel } { cctab-group-mismatch }
+        \__kernel_msg_error:nnx { cctab } { group-mismatch }
           {
             \int_sign:n
               { \tex_currentgrouplevel:D - \l_@@_internal_b_tl }
@@ -652,10 +652,10 @@
 %    \begin{macrocode}
 \cs_if_exist:NT \hook_gput_code:nnn
   {
-    \hook_gput_code:nnn { enddocument/end } { kernel }
+    \hook_gput_code:nnn { enddocument/end } { cctab }
       {
         \seq_if_empty:NF \g_@@_stack_seq
-          { \__kernel_msg_error:nn { kernel } { cctab-missing-end } }
+          { \__kernel_msg_error:nn { cctab } { missing-end } }
       }
   }
 %    \end{macrocode}
@@ -689,7 +689,7 @@
         \@@_chk_if_valid_aux:NTF #1
           { \prg_return_true: }
           {
-            \__kernel_msg_error:nnx { kernel } { invalid-cctab }
+            \__kernel_msg_error:nnx { cctab } { invalid-cctab }
               { \token_to_str:N #1 }
             \prg_return_false:
           }
@@ -830,32 +830,32 @@
 % \subsection{Messages}
 %
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { cctab-stack-full }
+\__kernel_msg_new:nnnn { cctab } { stack-full }
   { The~category~code~table~stack~is~exhausted. }
   {
     LaTeX~has~been~asked~to~switch~to~a~new~category~code~table,~
     but~there~is~no~more~space~to~do~this!
   }
-\__kernel_msg_new:nnnn { kernel } { cctab-extra-end }
+\__kernel_msg_new:nnnn { cctab } { extra-end }
   { Extra~\iow_char:N\\cctab_end:~ignored~\msg_line_context:. }
   {
     LaTeX~came~across~a~\iow_char:N\\cctab_end:~without~a~matching~
     \iow_char:N\\cctab_begin:N.~This~command~will~be~ignored.
   }
-\__kernel_msg_new:nnnn { kernel } { cctab-missing-end }
+\__kernel_msg_new:nnnn { cctab } { missing-end }
   { Missing~\iow_char:N\\cctab_end:~before~end~of~TeX~run. }
   {
     LaTeX~came~across~more~\iow_char:N\\cctab_begin:N~than~
     \iow_char:N\\cctab_end:.
   }
-\__kernel_msg_new:nnnn { kernel } { invalid-cctab }
+\__kernel_msg_new:nnnn { cctab } { invalid-cctab }
   { Invalid~\iow_char:N\\catcode~table. }
   {
     You~can~only~switch~to~a~\iow_char:N\\catcode~table~that~is~
     initialized~using~\iow_char:N\\cctab_new:N~or~
     \iow_char:N\\cctab_const:Nn.
   }
-\__kernel_msg_new:nnnn { kernel } { cctab-group-mismatch }
+\__kernel_msg_new:nnnn { cctab } { group-mismatch }
   {
     \iow_char:N\\cctab_end:~occurred~in~a~
     \int_case:nn {#1}
