--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -286,7 +286,7 @@
         \__kernel_if_debug:TF
           {
             \exp_not:N \__kernel_msg_warning:nnxxx
-              { kernel } { deprecated-command }
+              { deprecation } { deprecated-command }
               {#1}
               { \token_to_str:N #3 }
               { \tl_to_str:n {#2} }
@@ -332,7 +332,7 @@
           \cs_if_eq:NNTF #3 \cs_gset_protected:Npn
             { \exp_not:N \__kernel_msg_error:nnnnnn }
             { \exp_not:N \__kernel_msg_expandable_error:nnnnnn }
-            { kernel } { deprecated-command }
+            { deprecation } { deprecated-command }
             {#1}
             { \token_to_str:N #4 }
             { \tl_to_str:n {#2} }
@@ -353,10 +353,10 @@
     \tex_protected:D \tex_outer:D \tex_edef:D #1
       {
         \exp_not:N \__kernel_msg_expandable_error:nnnnn
-          { kernel } { deprecated-command }
+          { deprecation } { deprecated-command }
           { \tl_to_str:n {#3} } { \token_to_str:N #1 } { \tl_to_str:n {#2} }
         \exp_not:N \__kernel_msg_error:nnxxx
-          { kernel } { deprecated-command }
+          { deprecation } { deprecated-command }
           { \tl_to_str:n {#3} } { \token_to_str:N #1 } { \tl_to_str:n {#2} }
       }
   }
@@ -364,7 +364,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-\__kernel_msg_new:nnn { kernel } { deprecated-command }
+\__kernel_msg_new:nnn { deprecation } { deprecated-command }
   {
     \tl_if_blank:nF {#3} { Use~ \tl_trim_spaces:n {#3} ~not~ }
     #2~deprecated~on~#1.
