--- a/l3kernel/l3fp-logic.dtx
+++ b/l3kernel/l3fp-logic.dtx
@@ -423,7 +423,7 @@
     \prg_break_point:
     \use:n
       {
-        \@@_error:nfff { fp-step-tuple } { \fp_to_tl:n { #1#2 ; } }
+        \@@_error:nfff { step-tuple } { \fp_to_tl:n { #1#2 ; } }
           { \fp_to_tl:n { #3#4 ; } } { \fp_to_tl:n { #5#6 ; } }
       }
   }
@@ -442,7 +442,7 @@
               { zero-step } {#6}
           }
           {
-            \@@_error:nnfn { fp-bad-step } { }
+            \@@_error:nnfn { bad-step } { }
               { \fp_to_tl:n { \s_@@ \@@_chk:w #2#3#4 ; } } {#6}
           }
         \use_none:nnnnn
@@ -453,7 +453,7 @@
   {
     \fp_compare:nNnTF {#2} = {#3}
       {
-        \@@_error:nffn { fp-tiny-step }
+        \@@_error:nffn { tiny-step }
           { \fp_to_tl:n {#3} } { \fp_to_tl:n {#4} } {#6}
       }
       {
@@ -506,11 +506,11 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-\__kernel_msg_new:nnn { kernel } { fp-step-tuple }
+\__kernel_msg_new:nnn { fp } { step-tuple }
   { Tuple~argument~in~fp_step_...~{#1}{#2}{#3}. }
-\__kernel_msg_new:nnn { kernel } { fp-bad-step }
+\__kernel_msg_new:nnn { fp } { bad-step }
   { Invalid~step~size~#2~in~step~function~#3. }
-\__kernel_msg_new:nnn { kernel } { fp-tiny-step }
+\__kernel_msg_new:nnn { fp } { tiny-step }
   { Tiny~step~size~(#1+#2=#1)~in~step~function~#3. }
 %    \end{macrocode}
 %
@@ -698,7 +698,7 @@
         \@@_parse_expand:w
     \else:
       \__kernel_msg_expandable_error:nnnn
-        { kernel } { fp-missing } { : } { ~for~?: }
+        { fp } { missing } { : } { ~for~?: }
       \exp_after:wN \@@_parse_continue:NwN
       \exp_after:wN #1
       \exp:w \exp_end_continue_f:w
