--- a/l3kernel/l3fparray.dtx
+++ b/l3kernel/l3fparray.dtx
@@ -263,7 +263,7 @@
   }
 \cs_new_protected:Npn \@@_array_gset_recover:Nw #1#2 ;
   {
-    \@@_error:nffn { fp-unknown-type } { \tl_to_str:n { #2 ; } } { } { }
+    \@@_error:nffn { unknown-type } { \tl_to_str:n { #2 ; } } { } { }
     \exp_after:wN #1 \c_nan_fp
   }
 \cs_new_protected:Npn \@@_array_gset:w \s_@@ \@@_chk:w #1#2
