--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -517,7 +517,7 @@
   {
     \__kernel_chk_defined:NT #2
       {
-        #1 { LaTeX/kernel } { show-intarray }
+        #1 { LaTeX / intarray } { show }
           { \token_to_str:N #2 }
           { \intarray_count:N #2 }
           { >~ \@@_to_clist:Nn #2 { , ~ } }
