--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -280,7 +280,7 @@
         \cs_set:Npn #1 ##1
           {
             \__kernel_msg_expandable_error:nnn
-              { kernel } { luatex-required } { #1 }
+              { luatex } { luatex-required } { #1 }
           }
       }
     \clist_map_inline:nn
@@ -289,7 +289,7 @@
         \cs_set_protected:Npn #1 ##1
           {
             \__kernel_msg_error:nnn
-              { kernel } { luatex-required } { #1 }
+              { luatex } { luatex-required } { #1 }
           }
       }
   }
@@ -301,7 +301,7 @@
 % \subsection{Messages}
 %
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { luatex-required }
+\__kernel_msg_new:nnnn { luatex } { luatex-required }
   { LuaTeX~engine~not~in~use!~Ignoring~#1. }
   {
     The~feature~you~are~using~is~only~available~
