--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -637,7 +637,7 @@
   {
     \msg_if_exist:nnT {#1} {#2}
       {
-        \__kernel_msg_error:nnxx { kernel } { message-already-defined }
+        \__kernel_msg_error:nnxx { msg } { message-already-defined }
           {#1} {#2}
       }
   }
@@ -1342,7 +1342,7 @@
 \cs_new:Npn \@@_class_chk_exist:nT #1
   {
     \cs_if_free:cTF { @@_ #1 _code:nnnnnn }
-      { \__kernel_msg_error:nnx { kernel } { message-class-unknown } {#1} }
+      { \__kernel_msg_error:nnx { msg } { message-class-unknown } {#1} }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1412,7 +1412,7 @@
             \@@_use_redirect_name:n { #2 / #3 }
           }
       }
-      { \__kernel_msg_error:nnxx { kernel } { message-unknown } {#2} {#3} }
+      { \__kernel_msg_error:nnxx { msg } { message-unknown } {#2} {#3} }
     \cs_if_exist_use:N \conditionally@traceon
   }
 \cs_new_protected:Npn \@@_use_code: { }
@@ -1563,7 +1563,7 @@
               {
                 \prop_put:cnn { l_@@_redirect_ #2 _prop } {#3} {#2}
                 \__kernel_msg_warning:nnxxxx
-                  { kernel } { message-redirect-loop }
+                  { msg } { message-redirect-loop }
                   { \seq_item:Nn \l_@@_class_loop_seq { 1 } }
                   { \seq_item:Nn \l_@@_class_loop_seq { 2 } }
                   {#3}
@@ -1736,7 +1736,7 @@
 % Error messages needed to actually implement the message system
 % itself.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { message-already-defined }
+\__kernel_msg_new:nnnn { msg } { message-already-defined }
   { Message~'#2'~for~module~'#1'~already~defined. }
   {
     \c_@@_coding_error_text_tl
@@ -1744,7 +1744,7 @@
     by~the~module~'#1':~this~message~already~exists.
     \c_@@_return_text_tl
   }
-\__kernel_msg_new:nnnn { kernel } { message-unknown }
+\__kernel_msg_new:nnnn { msg } { message-unknown }
   { Unknown~message~'#2'~for~module~'#1'. }
   {
     \c_@@_coding_error_text_tl
@@ -1752,14 +1752,14 @@
     by~the~module~'#1':~this~message~does~not~exist.
     \c_@@_return_text_tl
   }
-\__kernel_msg_new:nnnn { kernel } { message-class-unknown }
+\__kernel_msg_new:nnnn { msg } { message-class-unknown }
   { Unknown~message~class~'#1'. }
   {
     LaTeX~has~been~asked~to~redirect~messages~to~a~class~'#1':\\
     this~was~never~defined.
     \c_@@_return_text_tl
   }
-\__kernel_msg_new:nnnn { kernel } { message-redirect-loop }
+\__kernel_msg_new:nnnn { msg } { message-redirect-loop }
   {
     Message~redirection~loop~caused~by~ {#1} ~=>~ {#2}
     \tl_if_empty:nF {#3} { ~for~module~' \use_none:n #3 ' } .
@@ -1783,16 +1783,6 @@
     #2~arguments.~
     TeX~allows~between~0~and~9~arguments~for~a~single~function.
   }
-\__kernel_msg_new:nnn { kernel } { char-active }
-  { Cannot~generate~active~chars. }
-\__kernel_msg_new:nnn { kernel } { char-invalid-catcode }
-  { Invalid~catcode~for~char~generation. }
-\__kernel_msg_new:nnn { kernel } { char-null-space }
-  { Cannot~generate~null~char~as~a~space. }
-\__kernel_msg_new:nnn { kernel } { char-out-of-range }
-  { Charcode~requested~out~of~engine~range. }
-\__kernel_msg_new:nnn { kernel } { char-space }
-  { Cannot~generate~space~chars. }
 \__kernel_msg_new:nnnn { kernel } { command-already-defined }
   { Control~sequence~#1~already~defined. }
   {
@@ -1870,72 +1860,6 @@
     LaTeX~has~been~asked~to~define~the~conditional~form~'#1'~of~
     the~function~'#2',~but~only~'TF',~'T',~'F',~and~'p'~forms~exist.
   }
-\__kernel_msg_new:nnnn { kernel } { key-no-property }
-  { No~property~given~in~definition~of~key~'#1'. }
-  {
-    \c_@@_coding_error_text_tl
-    Inside~\keys_define:nn  each~key~name~
-    needs~a~property:  \\ \\
-    \iow_indent:n { #1 .<property> } \\ \\
-    LaTeX~did~not~find~a~'.'~to~indicate~the~start~of~a~property.
-  }
-\__kernel_msg_new:nnnn { kernel } { key-property-boolean-values-only }
-  { The~property~'#1'~accepts~boolean~values~only. }
-  {
-    \c_@@_coding_error_text_tl
-    The~property~'#1'~only~accepts~the~values~'true'~and~'false'.
-  }
-\__kernel_msg_new:nnnn { kernel } { key-property-requires-value }
-  { The~property~'#1'~requires~a~value. }
-  {
-    \c_@@_coding_error_text_tl
-    LaTeX~was~asked~to~set~property~'#1'~for~key~'#2'.\\
-    No~value~was~given~for~the~property,~and~one~is~required.
-  }
-\__kernel_msg_new:nnnn { kernel } { key-property-unknown }
-  { The~key~property~'#1'~is~unknown. }
-  {
-    \c_@@_coding_error_text_tl
-    LaTeX~has~been~asked~to~set~the~property~'#1'~for~key~'#2':~
-    this~property~is~not~defined.
-  }
-\__kernel_msg_new:nnnn { kernel } { quote-in-shell }
-  { Quotes~in~shell~command~'#1'. }
-  { Shell~commands~cannot~contain~quotes~("). }
-\__kernel_msg_new:nnnn { kernel } { invalid-quark-function }
-  { Quark~test~function~'#1'~is~invalid. }
-  {
-    \c__msg_coding_error_text_tl
-    LaTeX~has~been~asked~to~create~quark~test~function~'#1'~
-    \tl_if_empty:nTF {#2}
-      { but~that~name~ }
-      { with~signature~'#2',~but~that~signature~ }
-    is~not~valid.
-  }
-\__kernel_msg_new:nnn { kernel } { invalid-quark }
-  { Invalid~quark~variable~'#1'. }
-\__kernel_msg_new:nnnn { kernel } { scanmark-already-defined }
-  { Scan~mark~#1~already~defined. }
-  {
-    \c_@@_coding_error_text_tl
-    LaTeX~has~been~asked~to~create~a~new~scan~mark~'#1'~
-    but~this~name~has~already~been~used~for~a~scan~mark.
-  }
-\__kernel_msg_new:nnnn { kernel } { shuffle-too-large }
-  { The~sequence~#1~is~too~long~to~be~shuffled~by~TeX. }
-  {
-    TeX~has~ \int_eval:n { \c_max_register_int + 1 } ~
-    toks~registers:~this~only~allows~to~shuffle~up~to~
-    \int_use:N \c_max_register_int \ items.~
-    The~list~will~not~be~shuffled.
-  }
-\__kernel_msg_new:nnnn { kernel } { variable-not-defined }
-  { Variable~#1~undefined. }
-  {
-    \c_@@_coding_error_text_tl
-    LaTeX~has~been~asked~to~show~a~variable~#1,~but~this~has~not~
-    been~defined~yet.
-  }
 \__kernel_msg_new:nnnn { kernel } { variant-too-long }
   { Variant~form~'#1'~longer~than~base~signature~of~'#2'. }
   {
@@ -1971,6 +1895,82 @@
         {#4} { :~base~form~is~already~a~variant. }
       } { . }
   }
+\__kernel_msg_new:nnn { char } { active }
+  { Cannot~generate~active~chars. }
+\__kernel_msg_new:nnn { char } { invalid-catcode }
+  { Invalid~catcode~for~char~generation. }
+\__kernel_msg_new:nnn { char } { null-space }
+  { Cannot~generate~null~char~as~a~space. }
+\__kernel_msg_new:nnn { char } { out-of-range }
+  { Charcode~requested~out~of~engine~range. }
+\__kernel_msg_new:nnn { char } { space }
+  { Cannot~generate~space~chars. }
+\__kernel_msg_new:nnnn { ior } { quote-in-shell }
+  { Quotes~in~shell~command~'#1'. }
+  { Shell~commands~cannot~contain~quotes~("). }
+\__kernel_msg_new:nnnn { keys } { key-no-property }
+  { No~property~given~in~definition~of~key~'#1'. }
+  {
+    \c_@@_coding_error_text_tl
+    Inside~\keys_define:nn  each~key~name~
+    needs~a~property:  \\ \\
+    \iow_indent:n { #1 .<property> } \\ \\
+    LaTeX~did~not~find~a~'.'~to~indicate~the~start~of~a~property.
+  }
+\__kernel_msg_new:nnnn { keys } { key-property-boolean-values-only }
+  { The~property~'#1'~accepts~boolean~values~only. }
+  {
+    \c_@@_coding_error_text_tl
+    The~property~'#1'~only~accepts~the~values~'true'~and~'false'.
+  }
+\__kernel_msg_new:nnnn { keys } { key-property-requires-value }
+  { The~property~'#1'~requires~a~value. }
+  {
+    \c_@@_coding_error_text_tl
+    LaTeX~was~asked~to~set~property~'#1'~for~key~'#2'.\\
+    No~value~was~given~for~the~property,~and~one~is~required.
+  }
+\__kernel_msg_new:nnnn { keys } { key-property-unknown }
+  { The~key~property~'#1'~is~unknown. }
+  {
+    \c_@@_coding_error_text_tl
+    LaTeX~has~been~asked~to~set~the~property~'#1'~for~key~'#2':~
+    this~property~is~not~defined.
+  }
+\__kernel_msg_new:nnnn { quark } { invalid-quark-function }
+  { Quark~test~function~'#1'~is~invalid. }
+  {
+    \c__msg_coding_error_text_tl
+    LaTeX~has~been~asked~to~create~quark~test~function~'#1'~
+    \tl_if_empty:nTF {#2}
+      { but~that~name~ }
+      { with~signature~'#2',~but~that~signature~ }
+    is~not~valid.
+  }
+\__kernel_msg_new:nnn { quark } { invalid-quark }
+  { Invalid~quark~variable~'#1'. }
+\__kernel_msg_new:nnnn { scanmark } { scanmark-already-defined }
+  { Scan~mark~#1~already~defined. }
+  {
+    \c_@@_coding_error_text_tl
+    LaTeX~has~been~asked~to~create~a~new~scan~mark~'#1'~
+    but~this~name~has~already~been~used~for~a~scan~mark.
+  }
+\__kernel_msg_new:nnnn { seq } { shuffle-too-large }
+  { The~sequence~#1~is~too~long~to~be~shuffled~by~TeX. }
+  {
+    TeX~has~ \int_eval:n { \c_max_register_int + 1 } ~
+    toks~registers:~this~only~allows~to~shuffle~up~to~
+    \int_use:N \c_max_register_int \ items.~
+    The~list~will~not~be~shuffled.
+  }
+\__kernel_msg_new:nnnn { kernel } { variable-not-defined }
+  { Variable~#1~undefined. }
+  {
+    \c_@@_coding_error_text_tl
+    LaTeX~has~been~asked~to~show~a~variable~#1,~but~this~has~not~
+    been~defined~yet.
+  }
 %    \end{macrocode}
 %
 % Some errors are only needed in package mode if debugging is enabled by
@@ -1978,7 +1978,7 @@
 % \texttt{log-functions}, or on the contrary if debugging is turned off.
 % In format mode the error is somewhat different.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { enable-debug }
+\__kernel_msg_new:nnnn { debug } { enable-debug }
   { To~use~'#1'~set~the~'enable-debug'~option. }
   {
     The~function~'#1'~will~be~ignored~because~it~can~only~work~if~
@@ -1996,13 +1996,13 @@
   { Misused~\exp_end_continue_f:w or~:nw }
 \__kernel_msg_new:nnn { kernel } { bad-variable }
   { Erroneous~variable~#1 used! }
-\__kernel_msg_new:nnn { kernel } { misused-sequence }
+\__kernel_msg_new:nnn { seq } { misused-sequence }
   { A~sequence~was~misused. }
-\__kernel_msg_new:nnn { kernel } { misused-prop }
+\__kernel_msg_new:nnn { prop } { misused-prop }
   { A~property~list~was~misused. }
-\__kernel_msg_new:nnn { kernel } { negative-replication }
+\__kernel_msg_new:nnn { prg } { negative-replication }
   { Negative~argument~for~\iow_char:N\\prg_replicate:nn. }
-\__kernel_msg_new:nnn { kernel } { prop-keyval }
+\__kernel_msg_new:nnn { prop } { prop-keyval }
   { Missing/extra~'='~in~'#1'~(in~'..._keyval:Nn') }
 \__kernel_msg_new:nnn { kernel } { unknown-comparison }
   { Relation~'#1'~unknown:~use~=,~<,~>,~==,~!=,~<=,~>=. }
@@ -2017,23 +2017,23 @@
 %
 % Messages used by the \enquote{\texttt{show}} functions.
 %    \begin{macrocode}
-\__kernel_msg_new:nnn { kernel } { show-clist }
+\__kernel_msg_new:nnn { clist } { show }
   {
     The~comma~list~ \tl_if_empty:nF {#1} { #1 ~ }
     \tl_if_empty:nTF {#2}
       { is~empty \\>~ . }
       { contains~the~items~(without~outer~braces): #2 . }
   }
-\__kernel_msg_new:nnn { kernel } { show-intarray }
+\__kernel_msg_new:nnn { intarray } { show }
   { The~integer~array~#1~contains~#2~items: \\ #3 . }
-\__kernel_msg_new:nnn { kernel } { show-prop }
+\__kernel_msg_new:nnn { prop } { show }
   {
     The~property~list~#1~
     \tl_if_empty:nTF {#2}
       { is~empty \\>~ . }
       { contains~the~pairs~(without~outer~braces): #2 . }
   }
-\__kernel_msg_new:nnn { kernel } { show-seq }
+\__kernel_msg_new:nnn { seq } { show }
   {
     The~sequence~#1~
     \tl_if_empty:nTF {#2}
