--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -1540,7 +1540,7 @@
 \cs_new:cpn { @@_replicate_first_-:n } #1
   {
     \exp_end:
-    \__kernel_msg_expandable_error:nn { kernel } { negative-replication }
+    \__kernel_msg_expandable_error:nn { prg } { negative-replication }
   }
 \cs_new:cpn { @@_replicate_first_0:n } #1 { \exp_end: }
 \cs_new:cpn { @@_replicate_first_1:n } #1 { \exp_end: #1 }
