--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -2020,7 +2020,7 @@
   {
     \__kernel_chk_defined:NT #2
       {
-        #1 { LaTeX/kernel } { show-clist }
+        #1 { LaTeX / clist } { show }
           { \token_to_str:N #2 }
           { \clist_map_function:NN #2 \msg_show_item:n }
           { } { }
@@ -2037,7 +2037,7 @@
 \cs_new_protected:Npn \clist_log:n { \@@_show:Nn \msg_log:nnxxxx }
 \cs_new_protected:Npn \@@_show:Nn #1#2
   {
-    #1 { LaTeX/kernel } { show-clist }
+    #1 { LaTeX / clist } { show }
       { } { \clist_map_function:nN {#2} \msg_show_item:n } { } { }
   }
 %    \end{macrocode}
