--- a/l3kernel/l3debug.dtx
+++ b/l3kernel/l3debug.dtx
@@ -169,7 +169,7 @@
     \exp_args:No \clist_map_inline:nn { \tl_to_str:n {#1} }
        {
         \cs_if_exist_use:cF { @@_ ##1 _on: }
-          { \__kernel_msg_error:nnn { kernel } { debug } {##1} }
+          { \__kernel_msg_error:nnn { debug } { debug } {##1} }
        }
   }
 \cs_set_protected:Npn \debug_off:n #1
@@ -177,7 +177,7 @@
     \exp_args:No \clist_map_inline:nn { \tl_to_str:n {#1} }
       {
         \cs_if_exist_use:cF { @@_ ##1 _off: }
-          { \__kernel_msg_error:nnn { kernel } { debug } {##1} }
+          { \__kernel_msg_error:nnn { debug } { debug } {##1} }
       }
   }
 \cs_new_protected:Npn \@@_all_on:
@@ -269,7 +269,7 @@
         \@@_suspended:T \use_none:nnn
         \cs_if_exist:NF ##1
           {
-            \__kernel_msg_error:nnx { kernel } { non-declared-variable }
+            \__kernel_msg_error:nnx { debug } { non-declared-variable }
               { \token_to_str:N ##1 }
           }
       }
@@ -362,7 +362,7 @@
       \if:w #1 \scan_stop:
         \cs_gset_nopar:Npn #1 {#2}
       \else:
-        \__kernel_msg_error:nnxxx { kernel } { local-global }
+        \__kernel_msg_error:nnxxx { debug } { local-global }
           {#1} {#2} { \iow_char:N \\ #3 }
       \fi:
     \fi:
@@ -437,7 +437,7 @@
       }
       {
         \__kernel_msg_expandable_error:nnnn
-          { kernel } { expr } {#4} {#1}
+          { debug } { expr } {#4} {#1}
       }
     #1
   }
@@ -562,11 +562,11 @@
     \if:w n #1 \prg_return_true: \else:
       \if:w N #1 \prg_return_false: \else:
         \__kernel_msg_expandable_error:nnn
-          { kernel } { bad-arg-type } {#1}
+          { debug } { bad-arg-type } {#1}
       \fi:
     \fi:
   }
-\__kernel_msg_new:nnn { kernel } { bad-arg-type }
+\__kernel_msg_new:nnn { debug } { bad-arg-type }
   { Wrong~argument~type~#1. }
 %    \end{macrocode}
 %   The macro below is a modifiec copy of
@@ -1431,7 +1431,7 @@
 %
 % Messages.
 % \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { debug }
+\__kernel_msg_new:nnnn { debug } { debug }
   { The~debugging~option~'#1'~does~not~exist~\msg_line_context:. }
   {
     The~functions~'\iow_char:N\\debug_on:n'~and~
@@ -1439,8 +1439,8 @@
     'all',~'check-declarations',~'check-expressions',~
     'deprecation',~'log-functions',~not~'#1'.
   }
-\__kernel_msg_new:nnn { kernel } { expr } { '#2'~in~#1 }
-\__kernel_msg_new:nnnn { kernel } { local-global }
+\__kernel_msg_new:nnn { debug } { expr } { '#2'~in~#1 }
+\__kernel_msg_new:nnnn { debug } { local-global }
   { Inconsistent~local/global~assignment }
   {
     \c_@@_coding_error_text_tl
@@ -1457,7 +1457,7 @@
     \ %
     variable~'#3'.
   }
-\__kernel_msg_new:nnnn { kernel } { non-declared-variable }
+\__kernel_msg_new:nnnn { debug } { non-declared-variable }
   { The~variable~#1~has~not~been~declared~\msg_line_context:. }
   {
     \c_@@_coding_error_text_tl
