--- a/l3kernel/l3fp-convert.dtx
+++ b/l3kernel/l3fp-convert.dtx
@@ -150,7 +150,7 @@
   }
 \cs_new:Npn \@@_to_scientific_recover:w #1 #2 ;
   {
-    \@@_error:nffn { fp-unknown-type } { \tl_to_str:n { #2 ; } } { } { }
+    \@@_error:nffn { unknown-type } { \tl_to_str:n { #2 ; } } { } { }
     nan
   }
 \cs_new:Npn \@@_tuple_to_scientific:w
@@ -244,7 +244,7 @@
   }
 \cs_new:Npn \@@_to_decimal_recover:w #1 #2 ;
   {
-    \@@_error:nffn { fp-unknown-type } { \tl_to_str:n { #2 ; } } { } { }
+    \@@_error:nffn { unknown-type } { \tl_to_str:n { #2 ; } } { } { }
     nan
   }
 \cs_new:Npn \@@_tuple_to_decimal:w
@@ -357,7 +357,7 @@
   { \@@_change_func_type:NNN #1 \@@_to_tl:w \@@_to_tl_recover:w #1 }
 \cs_new:Npn \@@_to_tl_recover:w #1 #2 ;
   {
-    \@@_error:nffn { fp-unknown-type } { \tl_to_str:n { #2 ; } } { } { }
+    \@@_error:nffn { unknown-type } { \tl_to_str:n { #2 ; } } { } { }
     nan
   }
 \cs_new:Npn \@@_tuple_to_tl:w
