--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -789,7 +789,7 @@
           }
       }
       {
-        \__kernel_msg_expandable_error:nn { kernel } { fp-early-end }
+        \__kernel_msg_expandable_error:nn { fp } { early-end }
         \exp_after:wN \c_nan_fp \exp:w \exp_end_continue_f:w
       }
     #1
@@ -811,8 +811,8 @@
               {
                 \cs_if_eq:NNTF ##2 #1 { \use_i:nn } { \use:n }
                 {
-                  \__kernel_msg_expandable_error:nnn { kernel }
-                    { fp-robust-cmd }
+                  \__kernel_msg_expandable_error:nnn { fp }
+                    { robust-cmd }
                 }
               }
               {
@@ -928,7 +928,7 @@
     \str_if_eq:nnTF {#1} {#2}
       {
         \__kernel_msg_expandable_error:nnn
-          { kernel } { fp-infty-pi } {#1}
+          { fp } { infty-pi } {#1}
         \c_nan_fp
       }
       { #4 \@@_parse_expand:w }
@@ -1026,7 +1026,7 @@
           { @@_parse_caseless_ \str_foldcase:n {#2} :N }
           {
             \__kernel_msg_expandable_error:nnn
-              { kernel } { unknown-fp-word } {#2}
+              { fp } { unknown-fp-word } {#2}
             \exp_after:wN \c_nan_fp \exp:w \exp_end_continue_f:w
             \@@_parse_infix:NN
           }
@@ -1081,13 +1081,13 @@
     \cs_if_exist:cTF { @@_parse_infix_ \token_to_str:N #1 :N }
       {
         \__kernel_msg_expandable_error:nnn
-          { kernel } { fp-missing-number } {#1}
+          { fp } { missing-number } {#1}
         \exp_after:wN \c_nan_fp \exp:w \exp_end_continue_f:w
         \@@_parse_infix:NN #3 #1
       }
       {
         \__kernel_msg_expandable_error:nnn
-          { kernel } { fp-unknown-symbol } {#1}
+          { fp } { unknown-symbol } {#1}
         \@@_parse_one:Nw #3
       }
   }
@@ -1760,7 +1760,7 @@
             = 0 \exp_stop_f:
           0
           \__kernel_msg_expandable_error:nnn
-            { kernel } { fp-after-e } { floating~point~ }
+            { fp } { after-e } { floating~point~ }
           \prg_return_true:
         \else:
           0
@@ -1776,14 +1776,14 @@
         \else:
           0
           \__kernel_msg_expandable_error:nnn
-            { kernel } { fp-after-e } { dimension~#1 }
+            { fp } { after-e } { dimension~#1 }
         \fi:
         \prg_return_false:
       \fi:
     \else:
       0
       \__kernel_msg_expandable_error:nnn
-        { kernel } { fp-missing } { exponent }
+        { fp } { missing } { exponent }
       \prg_return_true:
     \fi:
   }
@@ -1852,7 +1852,7 @@
 \cs_new:Npn \@@_parse_apply_unary_chk:nNNNNw #1#2#3#4#5#6 @
   {
     #2
-    \@@_error:nffn { fp-#1-arg } { \@@_func_to_name:N #4 } { } { }
+    \@@_error:nffn { #1-arg } { \@@_func_to_name:N #4 } { } { }
     \exp_after:wN #4 \exp_after:wN #5 \c_nan_fp @
   }
 \cs_new:Npn \@@_parse_apply_unary_type:NNN #1#2#3
@@ -1955,7 +1955,7 @@
       }
       {
         \exp_not:N \__kernel_msg_expandable_error:nnn
-          { kernel } { fp-missing } { ) }
+          { fp } { missing } { ) }
         \exp_not:N \tl_if_empty:nT {#2} \exp_not:N \c_@@_empty_tuple_fp
         #2 @
         \exp_not:N \use_none:n #3
@@ -1978,7 +1978,7 @@
         \exp_after:wN \c_@@_empty_tuple_fp \exp:w
       \else:
         \__kernel_msg_expandable_error:nnn
-          { kernel } { fp-missing-number } { ) }
+          { fp } { missing-number } { ) }
         \exp_after:wN \c_nan_fp \exp:w
       \fi:
       \exp_end_continue_f:w
@@ -2294,7 +2294,7 @@
   {
     \if_meaning:w \scan_stop: #1
       \__kernel_msg_expandable_error:nnn
-        { kernel } { fp-missing } { * }
+        { fp } { missing } { * }
       \exp_after:wN \@@_parse_infix_mul:N
       \exp_after:wN #2
       \exp_after:wN #3
@@ -2380,7 +2380,7 @@
           \exp_after:wN \use_none:n
           \exp_after:wN #1
         \else:
-          \__kernel_msg_expandable_error:nnn { kernel } { fp-extra } { ) }
+          \__kernel_msg_expandable_error:nnn { fp } { extra } { ) }
           \exp_after:wN \@@_parse_infix:NN
           \exp_after:wN ##1
           \exp:w \exp_after:wN \@@_parse_expand:w
@@ -2584,7 +2584,7 @@
   \@@_ternary_auxii:NwwN \c_@@_prec_colon_int
   {
     \__kernel_msg_expandable_error:nnnn
-      { kernel } { fp-missing } { ? } { ~for~?: }
+      { fp } { missing } { ? } { ~for~?: }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2625,7 +2625,7 @@
 \cs_new:Npn \@@_parse_excl_error:
   {
     \__kernel_msg_expandable_error:nnnn
-      { kernel } { fp-missing } { = } { ~after~!. }
+      { fp } { missing } { = } { ~after~!. }
   }
 \cs_new:Npn \@@_parse_compare:NNNNNNN #1
   {
@@ -2729,7 +2729,7 @@
     \@@_array_if_all_fp:nTF {#3}
       { #2 #3 @ }
       {
-        \@@_error:nffn { fp-bad-args }
+        \@@_error:nffn { bad-args }
           {#1}
           { \fp_to_tl:n { \s_@@_tuple \@@_tuple_chk:w {#3} ; } }
           { }
@@ -2768,7 +2768,7 @@
   }
 \cs_new:Npn \@@_parse_function_one_two_error_o:w #1#2#3#4 @
   {
-    \@@_error:nffn { fp-bad-args }
+    \@@_error:nffn { bad-args }
       {#2}
       { \fp_to_tl:n { \s_@@_tuple \@@_tuple_chk:w {#4} ; } }
       { }
@@ -2859,37 +2859,37 @@
 % \subsection{Messages}
 %
 %    \begin{macrocode}
-\__kernel_msg_new:nnn { kernel } { fp-deprecated }
+\__kernel_msg_new:nnn { fp } { deprecated }
   { '#1'~deprecated;~use~'#2' }
-\__kernel_msg_new:nnn { kernel } { unknown-fp-word }
+\__kernel_msg_new:nnn { fp } { unknown-fp-word }
   { Unknown~fp~word~#1. }
-\__kernel_msg_new:nnn { kernel } { fp-missing }
+\__kernel_msg_new:nnn { fp } { missing }
   { Missing~#1~inserted #2. }
-\__kernel_msg_new:nnn { kernel } { fp-extra }
+\__kernel_msg_new:nnn { fp } { extra }
   { Extra~#1~ignored. }
-\__kernel_msg_new:nnn { kernel } { fp-early-end }
+\__kernel_msg_new:nnn { fp } { early-end }
   { Premature~end~in~fp~expression. }
-\__kernel_msg_new:nnn { kernel } { fp-after-e }
+\__kernel_msg_new:nnn { fp } { after-e }
   { Cannot~use~#1 after~'e'. }
-\__kernel_msg_new:nnn { kernel } { fp-missing-number }
+\__kernel_msg_new:nnn { fp } { missing-number }
   { Missing~number~before~'#1'. }
-\__kernel_msg_new:nnn { kernel } { fp-unknown-symbol }
+\__kernel_msg_new:nnn { fp } { unknown-symbol }
   { Unknown~symbol~#1~ignored. }
-\__kernel_msg_new:nnn { kernel } { fp-extra-comma }
+\__kernel_msg_new:nnn { fp } { extra-comma }
   { Unexpected~comma~turned~to~nan~result. }
-\__kernel_msg_new:nnn { kernel } { fp-no-arg }
+\__kernel_msg_new:nnn { fp } { no-arg }
   { #1~got~no~argument;~used~nan. }
-\__kernel_msg_new:nnn { kernel } { fp-multi-arg }
+\__kernel_msg_new:nnn { fp } { multi-arg }
   { #1~got~more~than~one~argument;~used~nan. }
-\__kernel_msg_new:nnn { kernel } { fp-num-args }
+\__kernel_msg_new:nnn { fp } { num-args }
   { #1~expects~between~#2~and~#3~arguments. }
-\__kernel_msg_new:nnn { kernel } { fp-bad-args }
+\__kernel_msg_new:nnn { fp } { bad-args }
   { Arguments~in~#1#2~are~invalid. }
-\__kernel_msg_new:nnn { kernel } { fp-infty-pi }
+\__kernel_msg_new:nnn { fp } { infty-pi }
   { Math~command~#1 is~not~an~fp }
 \cs_if_exist:cT { @unexpandable@protect }
   {
-    \__kernel_msg_new:nnn { kernel } { fp-robust-cmd }
+    \__kernel_msg_new:nnn { fp } { robust-cmd }
       { Robust~command~#1 invalid~in~fp~expression! }
   }
 %    \end{macrocode}
