--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -334,7 +334,7 @@
           }
           {
             \__kernel_msg_expandable_error:nnnnn
-              { kernel } { fp-num-args } { rand() } { 0 } { 0 }
+              { fp } { num-args } { rand() } { 0 } { 0 }
             \exp_after:wN \c_nan_fp
           }
       }
