--- a/l3kernel/l3fp-round.dtx
+++ b/l3kernel/l3fp-round.dtx
@@ -410,9 +410,9 @@
 \cs_new:Npn \@@_round_no_arg_o:Nw #1
   {
     \cs_if_eq:NNTF #1 \@@_round_to_nearest:NNN
-      { \@@_error:nnnn { fp-num-args } { round () } { 1 } { 3 } }
+      { \@@_error:nnnn { num-args } { round () } { 1 } { 3 } }
       {
-        \@@_error:nffn { fp-num-args }
+        \@@_error:nffn { num-args }
           { \@@_round_name_from_cs:N #1 () } { 1 } { 2 }
       }
     \exp_after:wN \c_nan_fp
@@ -443,12 +443,12 @@
             #2 ; #3 ;
           }
           {
-            \@@_error:nnnn { fp-num-args } { round () } { 1 } { 3 }
+            \@@_error:nnnn { num-args } { round () } { 1 } { 3 }
             \exp_after:wN \c_nan_fp
           }
       }
       {
-        \@@_error:nffn { fp-num-args }
+        \@@_error:nffn { num-args }
           { \@@_round_name_from_cs:N #1 () } { 1 } { 2 }
         \exp_after:wN \c_nan_fp
       }
