--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1223,7 +1223,7 @@
            #2 \s_@@_mark \@@_clean_up_active:w
         {
           \__kernel_msg_expandable_error:nn
-            { kernel } { misplaced-equals-sign }
+            { keyval } { misplaced-equals-sign }
           \@@_loop_other:nnw
         }
       \cs_new:Npn \@@_misplaced_equal_in_split_error:w
@@ -1231,7 +1231,7 @@
           ##3 \s_@@_mark ##4 ##5
         {
           \__kernel_msg_expandable_error:nn
-            { kernel } { misplaced-equals-sign }
+            { keyval } { misplaced-equals-sign }
           \@@_loop_other:nnw
         }
 %    \end{macrocode}
@@ -1314,16 +1314,16 @@
 \cs_new:Npn \@@_blank_key_error:w \s_@@_mark \s_@@_stop \exp_not:n #1
   {
     \__kernel_msg_expandable_error:nn
-      { kernel } { blank-key-name }
+      { keyval } { blank-key-name }
   }
 %    \end{macrocode}
 % \end{macro}
 %
 % Two messages for the low level parsing system.
 %    \begin{macrocode}
-\__kernel_msg_new:nnn { kernel } { misplaced-equals-sign }
+\__kernel_msg_new:nnn { keyval } { misplaced-equals-sign }
   { Misplaced~equals~sign~in~key-value~input~\msg_line_context: }
-\__kernel_msg_new:nnn { kernel } { blank-key-name }
+\__kernel_msg_new:nnn { keyval } { blank-key-name }
   { Blank~key~name~in~key-value~input~\msg_line_context: }
 %    \end{macrocode}
 %
@@ -1613,7 +1613,7 @@
       {
         \str_if_empty:NF \l_@@_property_str
           {
-            \__kernel_msg_error:nnxx { kernel } { key-property-unknown }
+            \__kernel_msg_error:nnxx { keys } { key-property-unknown }
               \l_@@_property_str \l_keys_path_str
           }
       }
@@ -1676,7 +1676,7 @@
     #1 \s_@@_nil #2 \@@_property_find_err:w
   {
     \str_clear:N \l__keys_property_str
-    \__kernel_msg_error:nnn { kernel } { key-no-property } {#1}
+    \__kernel_msg_error:nnn { keys } { key-no-property } {#1}
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1698,7 +1698,7 @@
           \l_@@_property_str \s_@@_stop
           { \use:c { \c_@@_props_root_str \l_@@_property_str } }
           {
-            \__kernel_msg_error:nnxx { kernel } { key-property-requires-value }
+            \__kernel_msg_error:nnxx { keys } { key-property-requires-value }
               \l_@@_property_str \l_keys_path_str
           }
       }
@@ -1728,7 +1728,7 @@
       { \exp_not:c { bool_ #2 set_false:N } \exp_not:N #1 }
     \@@_cmd_set:nn { \l_keys_path_str / unknown }
       {
-        \__kernel_msg_error:nnx { kernel } { boolean-values-only }
+        \__kernel_msg_error:nnx { keys } { boolean-values-only }
           \l_keys_key_str
       }
     \@@_default_set:n { true }
@@ -1750,7 +1750,7 @@
       { \exp_not:c { bool_ #2 set_true:N } \exp_not:N #1 }
     \@@_cmd_set:nn { \l_keys_path_str / unknown }
       {
-        \__kernel_msg_error:nnx { kernel } { boolean-values-only }
+        \__kernel_msg_error:nnx { keys } { boolean-values-only }
           \l_keys_key_str
       }
     \@@_default_set:n { true }
@@ -1779,7 +1779,7 @@
           { \c_@@_type_root_str \@@_parent:o \l_keys_path_str }
           { choice }
           {
-            \__kernel_msg_error:nnxx { kernel } { nested-choice-key }
+            \__kernel_msg_error:nnxx { keys } { nested-choice-key }
               \l_keys_path_tl { \@@_parent:o \l_keys_path_str }
           }
           { \@@_choice_make_aux:N #1 }
@@ -1793,7 +1793,7 @@
     \@@_cmd_set:nn \l_keys_path_str { #1 {##1} }
     \@@_cmd_set:nn { \l_keys_path_str / unknown }
       {
-        \__kernel_msg_error:nnxx { kernel } { key-choice-unknown }
+        \__kernel_msg_error:nnxx { keys } { key-choice-unknown }
           \l_keys_path_str {##1}
       }
   }
@@ -2017,7 +2017,7 @@
           }
       }
       {
-        \__kernel_msg_error:nnx { kernel }
+        \__kernel_msg_error:nnx { keys }
           { key-property-boolean-values-only }
           { .value_ #1 :n }
       }
@@ -2026,7 +2026,7 @@
   {
     \bool_if:NF \l_@@_no_value_bool
       {
-        \__kernel_msg_error:nnxx { kernel } { value-forbidden }
+        \__kernel_msg_error:nnxx { keys } { value-forbidden }
           \l_keys_path_str \l_keys_value_tl
         \use_none:nnn
       }
@@ -2035,7 +2035,7 @@
   {
     \bool_if:NT \l_@@_no_value_bool
       {
-        \__kernel_msg_error:nnx { kernel } { value-required }
+        \__kernel_msg_error:nnx { keys } { value-required }
           \l_keys_path_str
         \use_none:nnn
       }
@@ -2875,7 +2875,7 @@
           { \c_@@_code_root_str \l_@@_module_str / unknown }
           { \@@_execute:no { \l_@@_module_str / unknown } \l_keys_value_tl }
           {
-            \__kernel_msg_error:nnxx { kernel } { key-unknown }
+            \__kernel_msg_error:nnxx { keys } { key-unknown }
               \l_keys_path_str \l_@@_module_str
           }
       }
@@ -2948,7 +2948,7 @@
         {
           \tl_if_blank:nF {##1}
             {
-              \__kernel_msg_error:nnxx { kernel } { bad-relative-key-path }
+              \__kernel_msg_error:nnxx { keys } { bad-relative-key-path }
                 \l_keys_path_str
                 \l_@@_relative_tl
             }
@@ -3124,7 +3124,7 @@
   { \@@_show:Nnn \msg_log:nnxxxx }
 \cs_new_protected:Npn \@@_show:Nnn #1#2#3
   {
-    #1 { LaTeX / kernel } { show-key }
+    #1 { LaTeX / keys } { show-key }
       { \@@_trim_spaces:n { #2 / #3 } }
       {
         \keys_if_exist:nnT {#2} {#3}
@@ -3148,43 +3148,43 @@
 %
 % For when there is a need to complain.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { bad-relative-key-path }
+\__kernel_msg_new:nnnn { keys } { bad-relative-key-path }
   { The~key~'#1'~is~not~inside~the~'#2'~path. }
   { The~key~'#1'~cannot~be~expressed~relative~to~path~'#2'. }
-\__kernel_msg_new:nnnn { kernel } { boolean-values-only }
+\__kernel_msg_new:nnnn { keys } { boolean-values-only }
   { Key~'#1'~accepts~boolean~values~only. }
   { The~key~'#1'~only~accepts~the~values~'true'~and~'false'. }
-\__kernel_msg_new:nnnn { kernel } { key-choice-unknown }
+\__kernel_msg_new:nnnn { keys } { key-choice-unknown }
   { Key~'#1'~accepts~only~a~fixed~set~of~choices. }
   {
     The~key~'#1'~only~accepts~predefined~values,~
     and~'#2'~is~not~one~of~these.
   }
-\__kernel_msg_new:nnnn { kernel } { key-unknown }
+\__kernel_msg_new:nnnn { keys } { key-unknown }
   { The~key~'#1'~is~unknown~and~is~being~ignored. }
   {
     The~module~'#2'~does~not~have~a~key~called~'#1'.\\
     Check~that~you~have~spelled~the~key~name~correctly.
   }
-\__kernel_msg_new:nnnn { kernel } { nested-choice-key }
+\__kernel_msg_new:nnnn { keys } { nested-choice-key }
   { Attempt~to~define~'#1'~as~a~nested~choice~key. }
   {
     The~key~'#1'~cannot~be~defined~as~a~choice~as~the~parent~key~'#2'~is~
     itself~a~choice.
   }
-\__kernel_msg_new:nnnn { kernel } { value-forbidden }
+\__kernel_msg_new:nnnn { keys } { value-forbidden }
   { The~key~'#1'~does~not~take~a~value. }
   {
     The~key~'#1'~should~be~given~without~a~value.\\
     The~value~'#2'~was~present:~the~key~will~be~ignored.
   }
-\__kernel_msg_new:nnnn { kernel } { value-required }
+\__kernel_msg_new:nnnn { keys } { value-required }
   { The~key~'#1'~requires~a~value. }
   {
     The~key~'#1'~must~have~a~value.\\
     No~value~was~present:~the~key~will~be~ignored.
   }
-\__kernel_msg_new:nnn { kernel } { show-key }
+\__kernel_msg_new:nnn { keys } { show-key }
   {
     The~key~#1~
     \tl_if_empty:nTF {#2}
