--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -146,16 +146,16 @@
 % \begin{function}[updated = 2012-07-09]
 %   {
 %     \prop_put:Nnn,  \prop_put:NnV,  \prop_put:Nno,  \prop_put:Nnx,
-%     \prop_put:NVn,  \prop_put:NVV,  \prop_put:NVx,  \prop_put:Nvx, 
+%     \prop_put:NVn,  \prop_put:NVV,  \prop_put:NVx,  \prop_put:Nvx,
 %     \prop_put:Non,  \prop_put:Noo,, \prop_put:Nxx,
 %     \prop_put:cnn,  \prop_put:cnV,  \prop_put:cno,  \prop_put:cnx,
-%     \prop_put:cVn,  \prop_put:cVV,  \prop_put:cVx,  \prop_put:cvx, 
+%     \prop_put:cVn,  \prop_put:cVV,  \prop_put:cVx,  \prop_put:cvx,
 %     \prop_put:con,  \prop_put:coo,  \prop_put:cxx,
 %     \prop_gput:Nnn, \prop_gput:NnV, \prop_gput:Nno, \prop_gput:Nnx,
 %     \prop_gput:NVn, \prop_gput:NVV, \prop_gput:NVx, \prop_gput:Nvx,
 %     \prop_gput:Non, \prop_gput:Noo, \prop_gput:Nxx,
 %     \prop_gput:cnn, \prop_gput:cnV, \prop_gput:cno, \prop_gput:cnx,
-%     \prop_gput:cVn, \prop_gput:cVV, \prop_gput:cVx, \prop_gput:cvx, 
+%     \prop_gput:cVn, \prop_gput:cVV, \prop_gput:cVx, \prop_gput:cvx,
 %     \prop_gput:con, \prop_gput:coo, \prop_gput:cxx
 %   }
 %   \begin{syntax}
@@ -602,7 +602,7 @@
 %   error and removes its argument.
 %    \begin{macrocode}
 \cs_new:Npn \@@_pair:wn #1 \s_@@ #2
-  { \__kernel_msg_expandable_error:nn { kernel } { misused-prop } }
+  { \__kernel_msg_expandable_error:nn { prop } { misused-prop } }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -813,7 +813,7 @@
         \str_if_eq:nnTF {#2} { = }
           { \prop_put:Nnn \l_@@_internal_prop {#3} {#1} }
           {
-            \__kernel_msg_error:nnx { kernel } { prop-keyval }
+            \__kernel_msg_error:nnx { prop } { prop-keyval }
               { \exp_not:o {#4} }
           }
       }
@@ -1359,7 +1359,7 @@
   {
     \__kernel_chk_defined:NT #2
       {
-        #1 { LaTeX/kernel } { show-prop }
+        #1 { LaTeX / prop } { show }
           { \token_to_str:N #2 }
           { \prop_map_function:NN #2 \msg_show_item:nn }
           { } { }
