--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -641,7 +641,7 @@
 \cs_new_protected:Npn \@@_new_test_aux:Nn #1 #2
   {
     \if_meaning:w \q_nil #2 \q_nil
-      \__kernel_msg_error:nnx { kernel } { invalid-quark-function }
+      \__kernel_msg_error:nnx { quark } { invalid-quark-function }
         { \token_to_str:N #1 }
     \else:
       \@@_new_test:Nccn #1
@@ -665,11 +665,11 @@
 \cs_new_protected:Npn \@@_new_conditional:Nnnn #1#2#3#4
   {
     \if_meaning:w \q_nil #2 \q_nil
-      \__kernel_msg_error:nnx { kernel } { invalid-quark-function }
+      \__kernel_msg_error:nnx { quark } { invalid-quark-function }
         { \token_to_str:N #1 }
     \else:
       \if_meaning:w \q_nil #3 \q_nil
-        \__kernel_msg_error:nnx { kernel } { invalid-quark-function }
+        \__kernel_msg_error:nnx { quark } { invalid-quark-function }
           { \token_to_str:N #1 }
       \else:
         \exp_last_unbraced:Nf \@@_new_test_aux:nnNNnnnn
@@ -684,7 +684,7 @@
   {
     \cs_if_exist_use:cTF { @@_new_#5_#2:Nnnn } { #4 }
       {
-        \__kernel_msg_error:nnxx { kernel } { invalid-quark-function }
+        \__kernel_msg_error:nnxx { quark } { invalid-quark-function }
           { \token_to_str:N #4 } {#2}
         \use_none:nnn
       }
@@ -961,7 +961,7 @@
   {
     \tl_if_in:NnTF \g_@@_marks_tl { #1 }
       {
-        \__kernel_msg_error:nnx { kernel } { scanmark-already-defined }
+        \__kernel_msg_error:nnx { scanmark } { scanmark-already-defined }
           { \token_to_str:N #1 }
       }
       {
