--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -1583,7 +1583,7 @@
 \cs_new_eq:NN \@@_escape_break:w \prg_break:
 \cs_new:cpn { @@_escape_/break:w }
   {
-    \__kernel_msg_expandable_error:nn { kernel } { trailing-backslash }
+    \__kernel_msg_expandable_error:nn { regex } { trailing-backslash }
     \prg_break:
   }
 \cs_new:cpn { @@_escape_~:w } { }
@@ -1620,7 +1620,7 @@
   {
     \int_compare:nNnTF {#1} > \c_max_char_int
       {
-        \__kernel_msg_expandable_error:nnff { kernel } { x-overflow }
+        \__kernel_msg_expandable_error:nnff { regex } { x-overflow }
           {#1} { \int_to_Hex:n {#1} }
       }
       {
@@ -1706,7 +1706,7 @@
   }
 \cs_new:Npn \@@_escape_x_loop_error:n #1
   {
-    \__kernel_msg_expandable_error:nnn { kernel } { x-missing-rbrace } {#1}
+    \__kernel_msg_expandable_error:nnn { regex } { x-missing-rbrace } {#1}
     \@@_escape_loop:N #1
   }
 %    \end{macrocode}
@@ -2143,7 +2143,7 @@
       \if_int_compare:w \l_@@_mode_int = \c_@@_class_mode_int
         \exp_after:wN \exp_after:wN \exp_after:wN \use:n
       \else:
-        \__kernel_msg_error:nn { kernel } { c-bad-mode }
+        \__kernel_msg_error:nn { regex } { c-bad-mode }
         \exp_after:wN \exp_after:wN \exp_after:wN \use_none:n
       \fi:
     \fi:
@@ -2196,13 +2196,13 @@
   {
       \@@_if_in_class:TF
         {
-          \__kernel_msg_error:nn { kernel } { missing-rbrack }
+          \__kernel_msg_error:nn { regex } { missing-rbrack }
           \use:c { @@_compile_]: }
           \prg_do_nothing: \prg_do_nothing:
         }
         { }
       \if_int_compare:w \l_@@_group_level_int > 0 \exp_stop_f:
-        \__kernel_msg_error:nnx { kernel } { missing-rparen }
+        \__kernel_msg_error:nnx { regex } { missing-rparen }
           { \int_use:N \l_@@_group_level_int }
         \prg_replicate:nn
           { \l_@@_group_level_int }
@@ -2259,10 +2259,10 @@
       \prg_do_nothing: \prg_do_nothing:
       \prg_do_nothing: \prg_do_nothing:
       \int_compare:nNnT \l_@@_mode_int = \c_@@_catcode_mode_int
-        { \__kernel_msg_error:nn { kernel } { c-trailing } }
+        { \__kernel_msg_error:nn { regex } { c-trailing } }
       \int_compare:nNnT \l_@@_mode_int < \c_@@_outer_mode_int
         {
-          \__kernel_msg_error:nn { kernel } { c-missing-rbrace }
+          \__kernel_msg_error:nn { regex } { c-missing-rbrace }
           \@@_compile_end_cs:
           \prg_do_nothing: \prg_do_nothing:
           \prg_do_nothing: \prg_do_nothing:
@@ -2373,7 +2373,7 @@
 \cs_new_protected:Npn \@@_compile_quantifier_abort:xNN #1#2#3
   {
     \@@_compile_quantifier_none:
-    \__kernel_msg_warning:nnxx { kernel } { invalid-quantifier } {#1} {#3}
+    \__kernel_msg_warning:nnxx { regex } { invalid-quantifier } {#1} {#3}
     \@@_compile_abort_tokens:x {#1}
     #2 #3
   }
@@ -2489,7 +2489,7 @@
       {
         \if_int_compare:w \l_@@_internal_a_int >
           \l_@@_internal_b_int
-          \__kernel_msg_error:nnxx { kernel } { backwards-quantifier }
+          \__kernel_msg_error:nnxx { regex } { backwards-quantifier }
             { \int_use:N \l_@@_internal_a_int }
             { \int_use:N \l_@@_internal_b_int }
           \int_zero:N \l_@@_internal_b_int
@@ -2523,7 +2523,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_compile_raw_error:N #1
   {
-    \__kernel_msg_error:nnx { kernel } { bad-escape } {#1}
+    \__kernel_msg_error:nnx { regex } { bad-escape } {#1}
     \@@_compile_raw:N #1
   }
 %    \end{macrocode}
@@ -2582,7 +2582,7 @@
     \@@_if_end_range:NNTF #2 #3
       {
         \if_int_compare:w `#1 > `#3 \exp_stop_f:
-          \__kernel_msg_error:nnxx { kernel } { range-backwards } {#1} {#3}
+          \__kernel_msg_error:nnxx { regex } { range-backwards } {#1} {#3}
         \else:
           \tl_build_put_right:Nx \l_@@_build_tl
             {
@@ -2596,7 +2596,7 @@
         \fi:
       }
       {
-        \__kernel_msg_warning:nnxx { kernel } { range-missing-end }
+        \__kernel_msg_warning:nnxx { regex } { range-missing-end }
           {#1} { \c_backslash_str #3 }
         \tl_build_put_right:Nx \l_@@_build_tl
           {
@@ -2859,11 +2859,11 @@
           {
             : { \@@_compile_class_posix:NNNNw }
             = {
-                \__kernel_msg_warning:nnx { kernel }
+                \__kernel_msg_warning:nnx { regex }
                   { posix-unsupported } { = }
               }
             . {
-                \__kernel_msg_warning:nnx { kernel }
+                \__kernel_msg_warning:nnx { regex }
                   { posix-unsupported } { . }
               }
           }
@@ -2905,7 +2905,7 @@
               }
           }
           {
-            \__kernel_msg_warning:nnx { kernel } { posix-unknown }
+            \__kernel_msg_warning:nnx { regex } { posix-unknown }
               { \l_@@_internal_a_tl }
             \@@_compile_abort_tokens:x
               {
@@ -2915,7 +2915,7 @@
           }
       }
       {
-        \__kernel_msg_error:nnxx { kernel } { posix-missing-close }
+        \__kernel_msg_error:nnxx { regex } { posix-missing-close }
           { [: \l_@@_internal_a_tl } { #2 #4 }
         \@@_compile_abort_tokens:x { [: \l_@@_internal_a_tl }
         #1 #2 #3 #4
@@ -2961,7 +2961,7 @@
       \int_set_eq:NN \l_@@_catcodes_int \l_@@_default_catcodes_int
       \exp_after:wN \@@_compile_quantifier:w
     \else:
-      \__kernel_msg_warning:nn { kernel } { extra-rparen }
+      \__kernel_msg_warning:nn { regex } { extra-rparen }
       \exp_after:wN \@@_compile_raw:N \exp_after:wN )
     \fi:
   }
@@ -2980,7 +2980,7 @@
       {
         \if_int_compare:w \l_@@_mode_int =
           \c_@@_catcode_in_class_mode_int
-          \__kernel_msg_error:nn { kernel } { c-lparen-in-class }
+          \__kernel_msg_error:nn { regex } { c-lparen-in-class }
           \exp_after:wN \@@_compile_raw:N \exp_after:wN (
         \else:
           \exp_after:wN \@@_compile_lparen:w
@@ -2994,7 +2994,7 @@
         \cs_if_exist_use:cF
           { @@_compile_special_group_\token_to_str:N #4 :w }
           {
-            \__kernel_msg_warning:nnx { kernel } { special-group-unknown }
+            \__kernel_msg_warning:nnx { regex } { special-group-unknown }
               { (? #4 }
             \@@_compile_group_begin:N \@@_group:nnnN
               \@@_compile_raw:N ? #3 #4
@@ -3063,7 +3063,7 @@
           { \@@_item_caseless_range:nn }
       }
       {
-        \__kernel_msg_warning:nnx { kernel } { unknown-option } { (?i #2 }
+        \__kernel_msg_warning:nnx { regex } { unknown-option } { (?i #2 }
         \@@_compile_raw:N (
         \@@_compile_raw:N ?
         \@@_compile_raw:N i
@@ -3082,7 +3082,7 @@
           { \@@_item_caseful_range:nn }
       }
       {
-        \__kernel_msg_warning:nnx { kernel } { unknown-option } { (?-#2#4 }
+        \__kernel_msg_warning:nnx { regex } { unknown-option } { (?-#2#4 }
         \@@_compile_raw:N (
         \@@_compile_raw:N ?
         \@@_compile_raw:N -
@@ -3121,7 +3121,7 @@
       }
       { \cs_if_exist_use:cF { @@_compile_c_#2:w } }
           {
-            \__kernel_msg_error:nnx { kernel } { c-missing-category } {#2}
+            \__kernel_msg_error:nnx { regex } { c-missing-category } {#2}
             #1 #2
           }
   }
@@ -3142,7 +3142,7 @@
           { \token_if_eq_charcode:NNF #2 ( } % )
       }
       { \use:n }
-    { \__kernel_msg_error:nnn { kernel } { c-C-invalid } {#2} }
+    { \__kernel_msg_error:nnn { regex } { c-C-invalid } {#2} }
     #1 #2
   }
 %    \end{macrocode}
@@ -3195,7 +3195,7 @@
           { \@@_compile_c_lbrack_end: }
       }
           {
-            \__kernel_msg_error:nnx { kernel } { c-missing-rbrack } {#2}
+            \__kernel_msg_error:nnx { regex } { c-missing-rbrack } {#2}
             \@@_compile_c_lbrack_end:
             #1 #2
           }
@@ -3345,7 +3345,7 @@
             \@@_compile_u_loop:NN
           }
           {
-            \__kernel_msg_error:nn { kernel } { u-missing-lbrace }
+            \__kernel_msg_error:nn { regex } { u-missing-lbrace }
             \@@_compile_raw:N u #1 #2
           }
       }
@@ -3363,7 +3363,7 @@
           }
           {
             \if_false: { \fi: }
-            \__kernel_msg_error:nnx { kernel } { u-missing-rbrace } {#2}
+            \__kernel_msg_error:nnx { regex } { u-missing-rbrace } {#2}
             \@@_compile_u_end:
             #1 #2
           }
@@ -5253,14 +5253,14 @@
         {#1}
       \prg_do_nothing: \prg_do_nothing:
       \if_int_compare:w \l_@@_replacement_csnames_int > 0 \exp_stop_f:
-        \__kernel_msg_error:nnx { kernel } { replacement-missing-rbrace }
+        \__kernel_msg_error:nnx { regex } { replacement-missing-rbrace }
           { \int_use:N \l_@@_replacement_csnames_int }
         \tl_build_put_right:Nx \l_@@_build_tl
           { \prg_replicate:nn \l_@@_replacement_csnames_int \cs_end: }
       \fi:
       \seq_if_empty:NF \l_@@_replacement_category_seq
         {
-          \__kernel_msg_error:nnx { kernel } { replacement-missing-rparen }
+          \__kernel_msg_error:nnx { regex } { replacement-missing-rparen }
             { \seq_count:N \l_@@_replacement_category_seq }
           \seq_clear:N \l_@@_replacement_category_seq
         }
@@ -5528,12 +5528,12 @@
 \cs_new_protected:Npn \@@_replacement_cat:NNN #1#2#3
   {
     \token_if_eq_meaning:NNTF \prg_do_nothing: #3
-      { \__kernel_msg_error:nn { kernel } { replacement-catcode-end } }
+      { \__kernel_msg_error:nn { regex } { replacement-catcode-end } }
       {
         \int_compare:nNnTF { \l_@@_replacement_csnames_int } > 0
           {
             \__kernel_msg_error:nnnn
-              { kernel } { replacement-catcode-in-cs } {#1} {#3}
+              { regex } { replacement-catcode-in-cs } {#1} {#3}
             #2 #3
           }
           {
@@ -5549,7 +5549,7 @@
                     \@@_char_if_alphanumeric:NTF #3
                       {
                         \__kernel_msg_error:nnnn
-                          { kernel } { replacement-catcode-escaped }
+                          { regex } { replacement-catcode-escaped }
                           {#1} {#3}
                       }
                       { }
@@ -5713,7 +5713,7 @@
   \cs_new_protected:Npn \@@_replacement_c_S:w #1#2
     {
       \if_int_compare:w `#2 = 0 \exp_stop_f:
-        \__kernel_msg_error:nn { kernel } { replacement-null-space }
+        \__kernel_msg_error:nn { regex } { replacement-null-space }
       \fi:
       \tex_lccode:D `\ = `#2 \scan_stop:
       \tex_lowercase:D { \@@_replacement_put:n {~} }
@@ -5756,7 +5756,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_replacement_error:NNN #1#2#3
   {
-    \__kernel_msg_error:nnx { kernel } { replacement-#1 } {#3}
+    \__kernel_msg_error:nnx { regex } { replacement-#1 } {#3}
     #2 #3
   }
 %    \end{macrocode}
@@ -5814,7 +5814,7 @@
   {
     \@@_compile:n {#1}
     \@@_show:N \l_@@_internal_regex
-    \msg_show:nnxxxx { LaTeX / kernel } { show-regex }
+    \msg_show:nnxxxx { LaTeX / regex } { show }
       { \tl_to_str:n {#1} } { }
       { \l_@@_internal_a_tl } { }
   }
@@ -5823,7 +5823,7 @@
     \__kernel_chk_defined:NT #1
       {
         \@@_show:N #1
-        \msg_show:nnxxxx { LaTeX / kernel } { show-regex }
+        \msg_show:nnxxxx { LaTeX / regex } { show }
           { } { \token_to_str:N #1 }
           { \l_@@_internal_a_tl } { }
       }
@@ -6148,7 +6148,7 @@
         }
           = 0
         {
-          \__kernel_msg_error:nnxxx { kernel } { result-unbalanced }
+          \__kernel_msg_error:nnxxx { regex } { result-unbalanced }
             { splitting~or~extracting~submatches }
             { \flag_height:n { @@_end } }
             { \flag_height:n { @@_begin } }
@@ -6330,7 +6330,7 @@
   {
     \if_int_compare:w \l_@@_balance_int = 0 \exp_stop_f:
     \else:
-      \__kernel_msg_error:nnxxx { kernel } { result-unbalanced }
+      \__kernel_msg_error:nnxxx { regex } { result-unbalanced }
         { replacing }
         { \int_max:nn { - \l_@@_balance_int } { 0 } }
         { \int_max:nn { \l_@@_balance_int } { 0 } }
@@ -6731,14 +6731,14 @@
 %    \begin{macrocode}
 \use:x
   {
-    \__kernel_msg_new:nnn { kernel } { trailing-backslash }
+    \__kernel_msg_new:nnn { regex } { trailing-backslash }
       { Trailing~escape~char~'\iow_char:N\\'~in~regex~or~replacement. }
-    \__kernel_msg_new:nnn { kernel } { x-missing-rbrace }
+    \__kernel_msg_new:nnn { regex } { x-missing-rbrace }
       {
         Missing~brace~'\iow_char:N\}'~in~regex~
         '...\iow_char:N\\x\iow_char:N\{...##1'.
       }
-    \__kernel_msg_new:nnn { kernel } { x-overflow }
+    \__kernel_msg_new:nnn { regex } { x-overflow }
       {
         Character~code~##1~too~large~in~
         \iow_char:N\\x\iow_char:N\{##2\iow_char:N\}~regex.
@@ -6748,7 +6748,7 @@
 %
 % Invalid quantifier.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { invalid-quantifier }
+\__kernel_msg_new:nnnn { regex } { invalid-quantifier }
   { Braced~quantifier~'#1'~may~not~be~followed~by~'#2'. }
   {
     The~character~'#2'~is~invalid~in~the~braced~quantifier~'#1'.~
@@ -6760,13 +6760,13 @@
 % Messages for missing or extra closing brackets and parentheses, with
 % some fancy singular/plural handling for the case of parentheses.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { missing-rbrack }
+\__kernel_msg_new:nnnn { regex } { missing-rbrack }
   { Missing~right~bracket~inserted~in~regular~expression. }
   {
     LaTeX~was~given~a~regular~expression~where~a~character~class~
     was~started~with~'[',~but~the~matching~']'~is~missing.
   }
-\__kernel_msg_new:nnnn { kernel } { missing-rparen }
+\__kernel_msg_new:nnnn { regex } { missing-rparen }
   {
     Missing~right~
     \int_compare:nTF { #1 = 1 } { parenthesis } { parentheses } ~
@@ -6776,7 +6776,7 @@
     LaTeX~was~given~a~regular~expression~with~\int_eval:n {#1} ~
     more~left~parentheses~than~right~parentheses.
   }
-\__kernel_msg_new:nnnn { kernel } { extra-rparen }
+\__kernel_msg_new:nnnn { regex } { extra-rparen }
   { Extra~right~parenthesis~ignored~in~regular~expression. }
   {
     LaTeX~came~across~a~closing~parenthesis~when~no~submatch~group~
@@ -6786,7 +6786,7 @@
 %
 % Some escaped alphanumerics are not allowed everywhere.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { bad-escape }
+\__kernel_msg_new:nnnn { regex } { bad-escape }
   {
     Invalid~escape~'\iow_char:N\\#1'~
     \@@_if_in_cs:TF { within~a~control~sequence. }
@@ -6814,14 +6814,14 @@
 %
 % Range errors.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { range-missing-end }
+\__kernel_msg_new:nnnn { regex } { range-missing-end }
   { Invalid~end-point~for~range~'#1-#2'~in~character~class. }
   {
     The~end-point~'#2'~of~the~range~'#1-#2'~may~not~serve~as~an~
     end-point~for~a~range:~alphanumeric~characters~should~not~be~
     escaped,~and~non-alphanumeric~characters~should~be~escaped.
   }
-\__kernel_msg_new:nnnn { kernel } { range-backwards }
+\__kernel_msg_new:nnnn { regex } { range-backwards }
   { Range~'[#1-#2]'~out~of~order~in~character~class. }
   {
     In~ranges~of~characters~'[x-y]'~appearing~in~character~classes,~
@@ -6833,7 +6833,7 @@
 %
 % Errors related to |\c| and |\u|.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { c-bad-mode }
+\__kernel_msg_new:nnnn { regex } { c-bad-mode }
   { Invalid~nested~'\iow_char:N\\c'~escape~in~regular~expression. }
   {
     The~'\iow_char:N\\c'~escape~cannot~be~used~within~
@@ -6841,33 +6841,33 @@
     nor~another~category~test.~
     To~combine~several~category~tests,~use~'\iow_char:N\\c[...]'.
   }
-\__kernel_msg_new:nnnn { kernel } { c-C-invalid }
+\__kernel_msg_new:nnnn { regex } { c-C-invalid }
   { '\iow_char:N\\cC'~should~be~followed~by~'.'~or~'(',~not~'#1'. }
   {
     The~'\iow_char:N\\cC'~construction~restricts~the~next~item~to~be~a~
     control~sequence~or~the~next~group~to~be~made~of~control~sequences.~
     It~only~makes~sense~to~follow~it~by~'.'~or~by~a~group.
   }
-\__kernel_msg_new:nnnn { kernel } { c-lparen-in-class }
+\__kernel_msg_new:nnnn { regex } { c-lparen-in-class }
   { Catcode~test~cannot~apply~to~group~in~character~class }
   {
     Construction~such~as~'\iow_char:N\\cL(abc)'~are~not~allowed~inside~a~
     class~'[...]'~because~classes~do~not~match~multiple~characters~at~once.
   }
-\__kernel_msg_new:nnnn { kernel } { c-missing-rbrace }
+\__kernel_msg_new:nnnn { regex } { c-missing-rbrace }
   { Missing~right~brace~inserted~for~'\iow_char:N\\c'~escape. }
   {
     LaTeX~was~given~a~regular~expression~where~a~
     '\iow_char:N\\c\iow_char:N\{...'~construction~was~not~ended~
     with~a~closing~brace~'\iow_char:N\}'.
   }
-\__kernel_msg_new:nnnn { kernel } { c-missing-rbrack }
+\__kernel_msg_new:nnnn { regex } { c-missing-rbrack }
   { Missing~right~bracket~inserted~for~'\iow_char:N\\c'~escape. }
   {
     A~construction~'\iow_char:N\\c[...'~appears~in~a~
     regular~expression,~but~the~closing~']'~is~not~present.
   }
-\__kernel_msg_new:nnnn { kernel } { c-missing-category }
+\__kernel_msg_new:nnnn { regex } { c-missing-category }
   { Invalid~character~'#1'~following~'\iow_char:N\\c'~escape. }
   {
     In~regular~expressions,~the~'\iow_char:N\\c'~escape~sequence~
@@ -6875,19 +6875,19 @@
     capital~letter~representing~a~character~category,~namely~
     one~of~'ABCDELMOPSTU'.
   }
-\__kernel_msg_new:nnnn { kernel } { c-trailing }
+\__kernel_msg_new:nnnn { regex } { c-trailing }
   { Trailing~category~code~escape~'\iow_char:N\\c'... }
   {
     A~regular~expression~ends~with~'\iow_char:N\\c'~followed~
     by~a~letter.~It~will~be~ignored.
   }
-\__kernel_msg_new:nnnn { kernel } { u-missing-lbrace }
+\__kernel_msg_new:nnnn { regex } { u-missing-lbrace }
   { Missing~left~brace~following~'\iow_char:N\\u'~escape. }
   {
     The~'\iow_char:N\\u'~escape~sequence~must~be~followed~by~
     a~brace~group~with~the~name~of~the~variable~to~use.
   }
-\__kernel_msg_new:nnnn { kernel } { u-missing-rbrace }
+\__kernel_msg_new:nnnn { regex } { u-missing-rbrace }
   { Missing~right~brace~inserted~for~'\iow_char:N\\u'~escape. }
   {
     LaTeX~
@@ -6901,14 +6901,14 @@
 %
 % Errors when encountering the \textsc{posix} syntax |[:...:]|.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { posix-unsupported }
+\__kernel_msg_new:nnnn { regex } { posix-unsupported }
   { POSIX~collating~element~'[#1 ~ #1]'~not~supported. }
   {
     The~'[.foo.]'~and~'[=bar=]'~syntaxes~have~a~special~meaning~
     in~POSIX~regular~expressions.~This~is~not~supported~by~LaTeX.~
     Maybe~you~forgot~to~escape~a~left~bracket~in~a~character~class?
   }
-\__kernel_msg_new:nnnn { kernel } { posix-unknown }
+\__kernel_msg_new:nnnn { regex } { posix-unknown }
   { POSIX~class~'[:#1:]'~unknown. }
   {
     '[:#1:]'~is~not~among~the~known~POSIX~classes~
@@ -6917,7 +6917,7 @@
     '[:print:]',~'[:punct:]',~'[:space:]',~'[:upper:]',~
     '[:word:]',~and~'[:xdigit:]'.
   }
-\__kernel_msg_new:nnnn { kernel } { posix-missing-close }
+\__kernel_msg_new:nnnn { regex } { posix-missing-close }
   { Missing~closing~':]'~for~POSIX~class. }
   { The~POSIX~syntax~'#1'~must~be~followed~by~':]',~not~'#2'. }
 %    \end{macrocode}
@@ -6926,7 +6926,7 @@
 % with an unbalanced token list, which we must re-balance by adding
 % begin-group or end-group character tokens.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { result-unbalanced }
+\__kernel_msg_new:nnnn { regex } { result-unbalanced }
   { Missing~brace~inserted~when~#1. }
   {
     LaTeX~was~asked~to~do~some~regular~expression~operation,~
@@ -6938,13 +6938,13 @@
 %
 % Error message for unknown options.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { unknown-option }
+\__kernel_msg_new:nnnn { regex } { unknown-option }
   { Unknown~option~'#1'~for~regular~expressions. }
   {
     The~only~available~option~is~'case-insensitive',~toggled~by~
     '(?i)'~and~'(?-i)'.
   }
-\__kernel_msg_new:nnnn { kernel } { special-group-unknown }
+\__kernel_msg_new:nnnn { regex } { special-group-unknown }
   { Unknown~special~group~'#1~...'~in~a~regular~expression. }
   {
     The~only~valid~constructions~starting~with~'(?'~are~
@@ -6954,21 +6954,21 @@
 %
 % Errors in the replacement text.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { replacement-c }
+\__kernel_msg_new:nnnn { regex } { replacement-c }
   { Misused~'\iow_char:N\\c'~command~in~a~replacement~text. }
   {
     In~a~replacement~text,~the~'\iow_char:N\\c'~escape~sequence~
     can~be~followed~by~one~of~the~letters~'ABCDELMOPSTU'~
     or~a~brace~group,~not~by~'#1'.
   }
-\__kernel_msg_new:nnnn { kernel } { replacement-u }
+\__kernel_msg_new:nnnn { regex } { replacement-u }
   { Misused~'\iow_char:N\\u'~command~in~a~replacement~text. }
   {
     In~a~replacement~text,~the~'\iow_char:N\\u'~escape~sequence~
     must~be~~followed~by~a~brace~group~holding~the~name~of~the~
     variable~to~use.
   }
-\__kernel_msg_new:nnnn { kernel } { replacement-g }
+\__kernel_msg_new:nnnn { regex } { replacement-g }
   {
     Missing~brace~for~the~'\iow_char:N\\g'~construction~
     in~a~replacement~text.
@@ -6978,7 +6978,7 @@
     submatches~are~represented~either~as~'\iow_char:N \\g{dd..d}',~
     or~'\\d',~where~'d'~are~single~digits.~Here,~a~brace~is~missing.
   }
-\__kernel_msg_new:nnnn { kernel } { replacement-catcode-end }
+\__kernel_msg_new:nnnn { regex } { replacement-catcode-end }
   {
     Missing~character~for~the~'\iow_char:N\\c<category><character>'~
     construction~in~a~replacement~text.
@@ -6989,7 +6989,7 @@
     the~character~category.~Then,~a~character~must~follow.~LaTeX~
     reached~the~end~of~the~replacement~when~looking~for~that.
   }
-\__kernel_msg_new:nnnn { kernel } { replacement-catcode-escaped }
+\__kernel_msg_new:nnnn { regex } { replacement-catcode-escaped }
   {
     Escaped~letter~or~digit~after~category~code~in~replacement~text.
   }
@@ -6999,7 +6999,7 @@
     the~character~category.~Then,~a~character~must~follow,~not~
     '\iow_char:N\\#2'.
   }
-\__kernel_msg_new:nnnn { kernel } { replacement-catcode-in-cs }
+\__kernel_msg_new:nnnn { regex } { replacement-catcode-in-cs }
   {
     Category~code~'\iow_char:N\\c#1#3'~ignored~inside~
     '\iow_char:N\\c\{...\}'~in~a~replacement~text.
@@ -7009,7 +7009,7 @@
     '\iow_char:N\\c\{...\}'~are~ignored~when~building~the~control~
     sequence~name.
   }
-\__kernel_msg_new:nnnn { kernel } { replacement-null-space }
+\__kernel_msg_new:nnnn { regex } { replacement-null-space }
   { TeX~cannot~build~a~space~token~with~character~code~0. }
   {
     You~asked~for~a~character~token~with~category~space,~
@@ -7018,13 +7018,13 @@
     This~specific~case~is~impossible~and~will~be~replaced~
     by~a~normal~space.
   }
-\__kernel_msg_new:nnnn { kernel } { replacement-missing-rbrace }
+\__kernel_msg_new:nnnn { regex } { replacement-missing-rbrace }
   { Missing~right~brace~inserted~in~replacement~text. }
   {
     There~ \int_compare:nTF { #1 = 1 } { was } { were } ~ #1~
     missing~right~\int_compare:nTF { #1 = 1 } { brace } { braces } .
   }
-\__kernel_msg_new:nnnn { kernel } { replacement-missing-rparen }
+\__kernel_msg_new:nnnn { regex } { replacement-missing-rparen }
   { Missing~right~parenthesis~inserted~in~replacement~text. }
   {
     There~ \int_compare:nTF { #1 = 1 } { was } { were } ~ #1~
@@ -7035,14 +7035,14 @@
 %
 % Some escaped alphanumerics are not allowed everywhere.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { backwards-quantifier }
+\__kernel_msg_new:nnnn { regex } { backwards-quantifier }
   { Quantifer~"{#1,#2}"~is~backwards. }
   { The~values~given~in~a~quantifier~must~be~in~order. }
 %    \end{macrocode}
 %
 % Used when showing a regex.
 %    \begin{macrocode}
-\__kernel_msg_new:nnn { kernel } { show-regex }
+\__kernel_msg_new:nnn { regex } { show }
   {
     >~Compiled~regex~
     \tl_if_empty:nTF {#1} { variable~ #2 } { {#1} } :
