--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1570,9 +1570,9 @@
   {
     \if_int_compare:w #2 = 10 \exp_stop_f:
       \if_int_compare:w #1 =  0 \exp_stop_f:
-        \__kernel_msg_expandable_error:nn { kernel } { char-null-space }
+        \__kernel_msg_expandable_error:nn { char } { null-space }
       \else:
-        \__kernel_msg_expandable_error:nn { kernel } { char-space }
+        \__kernel_msg_expandable_error:nn { char } { space }
       \fi:
     \else:
       \if_int_odd:w 0
@@ -1580,14 +1580,14 @@
           \if_int_compare:w #2 = 5  \exp_stop_f: 1 \fi:
           \if_int_compare:w #2 = 9  \exp_stop_f: 1 \fi:
           \if_int_compare:w #2 > 13 \exp_stop_f: 1 \fi: \exp_stop_f:
-        \__kernel_msg_expandable_error:nn { kernel }
-          { char-invalid-catcode }
+        \__kernel_msg_expandable_error:nn { char }
+          { invalid-catcode }
       \else:
         \if_int_odd:w 0
           \if_int_compare:w #1 < 0 \exp_stop_f: 1 \fi:
           \if_int_compare:w #1 > \c_max_char_int 1 \fi: \exp_stop_f:
-          \__kernel_msg_expandable_error:nn { kernel }
-            { char-out-of-range }
+          \__kernel_msg_expandable_error:nn { char }
+            { out-of-range }
         \else:
           \@@_generate_aux:nnw {#1} {#2}
         \fi:
@@ -1630,7 +1630,7 @@
             {
               #3
               \if_int_compare:w #2 = 13 \exp_stop_f:
-                \__kernel_msg_expandable_error:nn { kernel } { char-active }
+                \__kernel_msg_expandable_error:nn { char } { active }
               \else:
                 \@@_generate_auxii:nnw {#1} {#2}
               \fi:
@@ -1684,7 +1684,7 @@
 %   lists, one for each character code, using \tn{tex_lowercase:D} to
 %   convert |^^@| in each case. The \texttt{x}-type expansion ensures
 %   that \tn{tex_lowercase:D} receives the contents of the token list.
-%   |^^L| is awkward hence this is done in three parts: up to |^^L|, 
+%   |^^L| is awkward hence this is done in three parts: up to |^^L|,
 %   |^^L| itslef and above |^L|. Notice that at this stage |^^@| is active.
 %    \begin{macrocode}
       \cs_set_protected:Npn \@@_tmp:n #1
