--- a/l3trial/l3fp-extras/l3fp-symbolic.dtx
+++ b/l3trial/l3fp-extras/l3fp-symbolic.dtx
@@ -153,7 +153,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_symbolic_chk:w #1,#2#3;
   {
-    \__kernel_msg_error:nnx { kernel } { misused-fp }
+    \__kernel_msg_error:nnx { fp } { misused-fp }
       {
         \@@_to_tl_dispatch:w
           \s_@@_symbolic \@@_symbolic_chk:w #1,{#2};
@@ -568,7 +568,7 @@
         \cs_if_exist:NTF #2
           {
             \__kernel_msg_warning:nnnn
-              { kernel } { fp-id-used-elsewhere } {#3} { variable }
+              { fp } { id-used-elsewhere } {#3} { variable }
             #1 #2 \@@_tmp:w
           }
           {
@@ -586,7 +586,7 @@
 \cs_new_protected:Npn \fp_clear_variable:n #1
   {
     \@@_id_if_invalid:nTF {#1}
-      { \__kernel_msg_error:nnn { kernel } { fp-id-invalid } {#1} }
+      { \__kernel_msg_error:nnn { fp } { id-invalid } {#1} }
       { \exp_args:No \@@_clear_variable:n { \tl_to_str:n {#1} } }
   }
 \cs_new_protected:Npn \@@_clear_variable:n #1
@@ -607,7 +607,7 @@
 \cs_new_protected:Npn \fp_new_variable:n #1
   {
     \@@_id_if_invalid:nTF {#1}
-      { \__kernel_msg_error:nnn { kernel } { fp-id-invalid } {#1} }
+      { \__kernel_msg_error:nnn { fp } { id-invalid } {#1} }
       { \exp_args:No \@@_new_variable:n { \tl_to_str:n {#1} } }
   }
 \cs_new_protected:Npn \@@_new_variable:n #1
@@ -615,7 +615,7 @@
     \cs_if_exist:cT { @@_parse_word_#1:N }
       {
         \__kernel_msg_error:nnn
-          { kernel } { fp-id-already-defined } {#1}
+          { fp } { id-already-defined } {#1}
         \cs_undefine:c { @@_parse_word_#1:N }
         \cs_undefine:c { l_@@_variable_#1_fp }
       }
@@ -645,7 +645,7 @@
 \cs_new_protected:Npn \fp_set_variable:nn #1
   {
     \@@_id_if_invalid:nTF {#1}
-      { \__kernel_msg_error:nnn { kernel } { fp-id-invalid } {#1} }
+      { \__kernel_msg_error:nnn { fp } { id-invalid } {#1} }
       { \exp_args:No \@@_set_variable:nn { \tl_to_str:n {#1} } }
   }
 \cs_new_protected:Npn \@@_set_variable:nn #1#2
@@ -658,7 +658,7 @@
     \fp_set:cn { l_@@_variable_#1_fp } { \l_@@_symbolic_fp }
     \flag_if_raised:nT { @@_symbolic }
       {
-        \__kernel_msg_error:nnxxx { kernel } { fp-id-loop }
+        \__kernel_msg_error:nnxxx { fp } { id-loop }
           { \tl_to_str:n {#1} }
           { \tl_to_str:n {#2} }
           { \fp_to_tl:N \l_@@_symbolic_fp }
@@ -689,27 +689,27 @@
 % \subsection{Messages}
 %
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { fp-id-invalid }
+\__kernel_msg_new:nnnn { fp } { id-invalid }
   { Floating~point~identifier~'#1'~invalid. }
   {
     \c__msg_coding_error_text_tl
     LaTeX~has~been~asked~to~create~a~new~floating~point~identifier~'#1'~
     but~this~may~only~contain~ASCII~letters.
   }
-\__kernel_msg_new:nnnn { kernel } { fp-id-already-defined }
+\__kernel_msg_new:nnnn { fp } { id-already-defined }
   { Floating~point~identifier~'#1'~already~defined. }
   {
     \c__msg_coding_error_text_tl
     LaTeX~has~been~asked~to~create~a~new~floating~point~identifier~'#1'~
     but~this~name~has~already~been~used~elsewhere.
   }
-\__kernel_msg_new:nnnn { kernel } { fp-id-used-elsewhere }
+\__kernel_msg_new:nnnn { fp } { id-used-elsewhere }
   { Floating~point~identifier~'#1'~already~used~for~something~else. }
   {
     LaTeX~has~been~asked~to~create~a~new~floating~point~identifier~'#1'~
     but~this~name~is~used,~and~is~not~a~user-defined~#2.
   }
-\__kernel_msg_new:nnnn { kernel } { fp-id-loop }
+\__kernel_msg_new:nnnn { fp } { id-loop }
   { Variable~'#1'~used~in~the~definition~of~'#1'. }
   {
     \c__msg_coding_error_text_tl
