--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -886,7 +886,7 @@
 \cs_new_protected:Npn \char_show:n #1
   {
     \int_set:Nn \l__char_code_int {#1}
-    \exp_after:wN \exp_after:wN \exp_after:wN \__char_show:N 
+    \exp_after:wN \exp_after:wN \exp_after:wN \__char_show:N
       \char_generate:nn { \l__char_code_int } { 12 }
   }
 \cs_new_protected:Npn \__char_show:N #1
@@ -941,7 +941,7 @@
           \tl_put_right:Nx \l__char_internal_tl
             { \\ not ~ in ~ current ~ font }
         }
-      \msg_show:nnxxxx { LaTeX/kernel } { show-char }
+      \msg_show:nnxxxx { LaTeX/char } { show-char }
         { \tl_to_str:n {#1} } { \tl_to_str:N \l__char_internal_tl } { } { }
     \group_end:
   }
@@ -1026,7 +1026,7 @@
       \prg_return_false:
     \fi:
   }
-\__kernel_msg_new:nnn { kernel } { show-char }
+\__kernel_msg_new:nnn { char } { show-char }
   {
     The ~ character ~ '#1' ~ has ~ character ~ code ~
     \int_eval:n { `#1 } , ~ and ~ properties #2
